# the-nyx-engine

./: .gitignore  ARCHITECTURE.md  README.md  nyx_augmentation_spec.txt
backend/: MORPHEUS.md  SAFETY.md  main.py  pyproject.toml  requirements.txt
backend/app/agents/: __init__.py  _degrade.py  atropos.py  base.py  chronicler.py  clotho.py  eris.py  hypnos.py  lachesis.py  momus.py  morpheus.py  nemesis.py  scribe.py  sophia.py
backend/sim/: README.md  __init__.py  baseline.friction.json  corpus.py  emit_artifact.py  life_script.py  metrics.py  null_rag.py  outcome.py  red_team.py  runner.py
backend/tests/: conftest.py  test_architecture.py  test_arrival.py  test_assayer.py  test_atelier.py  test_atropos.py  test_beat_gate.py  test_bfl.py  test_birth_opening.py  test_bookbinder.py  test_canon.py  test_cartridge.py  test_chapter_dreams.py  test_chronicler.py  test_client_safe_wire.py  test_clocks.py  test_clotho_parse.py  test_crisis_routing.py  test_db_init.py  test_deliberation.py  test_director.py  test_doom.py  test_durability_snapshot.py  test_epoch.py  test_eris.py  test_hamartia_engine.py  test_hypnos.py  test_init_session_guard.py  test_judge_repair_loop.py  test_kernel_assay.py  test_kernel_finalize.py  test_kernel_integration.py  test_kernel_morpheus.py  test_kernel_resolve.py  test_kernel_scribe.py  test_lachesis.py  test_legacy.py  test_momus.py  test_momus_precision.py  test_morpheus.py  (+31 more)
backend/worlds/: oldgate.nyx-world.json  the-low-quarter-aldridge-channel-district-0d7042.nyx-world.json  thornwell.nyx-world.json  world_cartridge.schema.json
(+108 files in other folders)
